main css updated on mobile and title fixed

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -160,23 +160,15 @@
 
 @media screen and (max-width: 1024px) {
   .main {
-    max-height: 100vh;
+    max-height: fit-content;
   }
 
   .mainContent {
     margin: 0;
     flex-direction: column-reverse;
-    height: 80vh;
+    height: auto;
     width: 100%;
     padding: 0 0 60px 0;
-  }
-
-  .punkHighlight {
-    flex: 0.8;
-  }
-
-  .punkDetails {
-    flex: 0.2;
   }
 
   .selectedPunk {
@@ -200,7 +192,7 @@
   }
 
   .title {
-    padding-left: 0.5em;
+    padding: 0 0.25em;
   }
 
   .itemNumber {
